...
                                <rect key="frame" x="8" y="56" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="6lf-3V-J6i"/>
                                    <constraint firstAttribute="height" constant="48" id="q3q-US-wgh"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="dBd-rf-PMg" eventType="touchUpInside" id="4QZ-Fd-979"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lY0-eK-6iS">
                                <rect key="frame" x="182" y="795" width="50" height="50"/>
...
                                    <constraint firstAttribute="width" constant="60" id="O6V-PE-nsY"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jh2-Vu-WCl">
                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate" label="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="KeG-W3-0U1"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP Black (iOS)"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
