...
            .withTintColor(.lightGray, renderingMode: .alwaysOriginal)
            .withConfiguration(UIImage.SymbolConfiguration(pointSize: 70, weight: .regular, scale: .large))
        imageView.image = placeholderImage
    }
    
    private func setupExitButton() {
        let exitIcon = UIImage(named: "Exit")
        exitButton.setImage(exitIcon, for: .normal)
        exitButton.tintColor = UIColor(named: "YP Red (iOS)")
        exitButton.translatesAutoresizingMaskIntoConstraints = false
        exitButton.accessibilityIdentifier = "logout button"
        exitButton.accessibilityLabel = "Exit"
        view.addSubview(exitButton)
...
